compiler/testData/diagnostics/tests/classLiteral/unresolvedClass.fir.kt
val u = <!UNRESOLVED_REFERENCE!>Unresolved<!>::class
val g = <!UNRESOLVED_REFERENCE!>UnresolvedGeneric<!><UnresolvedTypeArg>::class
